--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,9 +9,7 @@ html{
 }
 
 body{
-    background-color: #25b377;  
-    font-size: 1.8em; /* base font-size is equivalent "14px" */
-  
+    font-size: 1.8em; /* base font-size is equivalent "14px" */  
 }
 
 footer, header, .futur{
@@ -19,23 +17,38 @@ footer, header, .futur{
     background-color: $primary-color;
 }
 
-header{
-    
+header{    
     font-size: 6rem;
+    text-align: center;
+    margin-top: 0;
 }
 
-section {
+main {
     display: flex;
-    
+    flex-wrap: wrap;
+    width: 800px;   
+    margin-left: auto;
+    margin-right: auto;
 }
 
 img{
-    width: 150px;
+    width: 300px;
     box-shadow: 5px 5px 5px darkgray;
     &:hover {
         width: 160px;
     }
 }
 
+a{
+    color: $secondary-color;
+    text-decoration: none;
+}
 
+.futur{
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 25px;
+    text-align: center;
+    width: 15vw;
+}
 
