--- a/sass/Base/_typography.scss
+++ b/sass/Base/_typography.scss
@@ -1,6 +1,6 @@
 @font-face{
     font-family: "Grotesk_Light";
-    src: url("font/Grotesk_Light.ttf") format("truetype");
+    src: url("Grotesk_Light.ttf") format("truetype");
 }
 
 Grotesk Medium
