--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -2,6 +2,6 @@ header{
     font-size: 3rem;
     padding: 30px;
     text-align: center;
-    color: $secondary-color;
-    background-color: $primary-color;
+    color: $cd-secondary;
+    background-color: $cd-primary;
 }
