--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -1,9 +1,10 @@
 footer{
     display: flex;
-    justify-content: space-between;
-    font-size: 5rem;
+    position: sticky;
+    bottom: 0; right: 0; left: 0;
     padding: 10px;
-    text-align: center;
-    color: $secondary-color;
-    background-color: $primary-color;    
+    justify-content: space-between;
+    font-size: 3rem;   
+    color: $cd-secondary;
+    background-color: $cd-primary;    
 }
