--- a/sass/Pages/_work.scss
+++ b/sass/Pages/_work.scss
@@ -1,14 +1,51 @@
 main {       
     margin-left: auto;
     margin-right: auto;
+    min-height: calc(100vh - 70px);
     
+}
+
+form{
+    & input{
+        border: 2px solid $cd-primary;
+        border-radius: 100rem;
+        color: $cd-primary;
+        font-size: 2.5rem;
+        outline: none;
+        padding: .5rem 1.5rem;
+        width: 100%;
+        transition: background-color 500ms;
+        &:focus{
+        border: 2px solid $cd-secondary;
+        }
+        &:not(:focus):invalid {
+            background: $cd-danger;
+            border: 2px solid $cd-danger;
+            color: $cd-txt--invalid;
+        }
+    }
 }
 
 .menu_img{
     width: 350px;
-    box-shadow: 5px 5px 5px darkgray;
+    box-shadow: 0px 0px 10px 6px rgb(218, 218, 218);
+    transform: scale(1);
+    transition: transform 200ms;
     &:hover {
-        width: 320px;
+        transform: scale(1.10);
+    }
+    &--mod{
+        display: block;
+        width: 500px;   
+        position: relative; 
+        z-index: 1;    
+        margin-left: auto;
+        margin-right: auto;
+        transform: scale(1);
+        transition: transform 200ms;
+        &:hover {
+            transform: scale(1.50);
+        }
     }
 }
 
@@ -20,20 +57,81 @@ main {
 
 
 
-.futur{
-    width: 50vw;
-    font-size: 3rem;
+.btn {
+    width: 15rem;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 15px;
+    margin-bottom: 2vw;
+    background-color: $cd-primary;
+    border-radius: 2rem;
     text-align: center;
-    color: $secondary-color;
-    background-color: $primary-color;
+    cursor: pointer;
+    color: $cd-secondary;
+    font-size: 2rem;
+    overflow: hidden;
+    position: relative;
+    transition: transform 450ms, background-color 300ms 150ms;
+        &:hover {
+        transform: scale(1.13);
+        background-color: $cd-btn-end;
+    }
 }
+
+
 
 
 .main_index{
     display: flex;
     flex-wrap: wrap;
-    width: 900px; 
+    width: 900px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+////////////////TEST/////////////
+
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
+  
+  /* Style the submit button with a specific background color etc */
+  input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  /* When moving the mouse over the submit button, add a darker green color */
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+
+  /* Add a background color and some padding around the form */
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
 }
