--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -1,4 +1,16 @@
-// Variables 
-$font-stack:    Helvetica, sans-serif;
-$primary-color: #579c87;
-$secondary-color: #fdcb46;
+// Variables Colors
+$cd-primary: #579c87;
+$cd-secondary: #fdcb46;
+
+
+
+
+// Variables Test
+$cd-danger: #b20a37;
+$cd-txt--invalid: #fff;
+$ball-size : 200px;
+
+
+$cd-btn-start: #579c87;
+$cd-btn-end: #399276;
+$cd-btn: #579c87;
