--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-a {
-  color: #fdcb46;
-  text-decoration: none;
-}
-
 h1 {
   margin: 0;
 }
@@ -10,6 +5,11 @@ h1 {
 body {
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: #fdcb46;
 }
 
 @font-face {
@@ -50,6 +50,52 @@ footer {
   background-color: #579c87;
 }
 
+.btn_foot {
+  color: #fdcb46;
+  background-color: #579c87;
+  border: none;
+  font-size: 3rem;
+}
+.btn_foot:hover {
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
 main {
   margin-left: auto;
   margin-right: auto;
@@ -86,16 +132,12 @@ form input:not(:focus):invalid {
 }
 .menu_img--mod {
   display: block;
-  width: 500px;
+  width: 700px;
   position: relative;
-  z-index: 1;
   margin-left: auto;
   margin-right: auto;
   transform: scale(1);
   transition: transform 200ms;
-}
-.menu_img--mod:hover {
-  transform: scale(1.5);
 }
 
 .menu_name {
@@ -104,22 +146,22 @@ form input:not(:focus):invalid {
   text-align: center;
 }
 
-.btn {
+.btn_main {
+  display: block;
   width: 15rem;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 2vw;
-  background-color: #579c87;
   border-radius: 2rem;
+  font-size: 2rem;
+  overflow: hidden;
   text-align: center;
   cursor: pointer;
   color: #fdcb46;
-  font-size: 2rem;
-  overflow: hidden;
-  position: relative;
+  background-color: #579c87;
   transition: transform 450ms, background-color 300ms 150ms;
 }
-.btn:hover {
+.btn_main:hover {
   transform: scale(1.13);
   background-color: #399276;
 }
