--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -8,3 +8,28 @@ footer{
     color: $cd-secondary;
     background-color: $cd-primary;    
 }
+
+.btn_foot{
+    color: $cd-secondary;    
+    background-color: $cd-primary;
+    border: none;
+    font-size: 3rem;
+    &:hover{
+        animation: shake 0.5s;
+        animation-iteration-count: infinite;
+    }   
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
