--- a/sass/Pages/_work.scss
+++ b/sass/Pages/_work.scss
@@ -36,16 +36,12 @@ form{
     }
     &--mod{
         display: block;
-        width: 500px;   
+        width: 700px;   
         position: relative; 
-        z-index: 1;    
         margin-left: auto;
         margin-right: auto;
         transform: scale(1);
         transition: transform 200ms;
-        &:hover {
-            transform: scale(1.50);
-        }
     }
 }
 
@@ -56,20 +52,19 @@ form{
 }
 
 
-
-.btn {
+.btn_main {
+    display: block;
     width: 15rem;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 2vw;
-    background-color: $cd-primary;
+    margin-bottom: 2vw;    
     border-radius: 2rem;
+    font-size: 2rem;
+    overflow: hidden;
     text-align: center;
     cursor: pointer;
     color: $cd-secondary;
-    font-size: 2rem;
-    overflow: hidden;
-    position: relative;
+    background-color: $cd-primary;    
     transition: transform 450ms, background-color 300ms 150ms;
         &:hover {
         transform: scale(1.13);
