--- a/sass/Pages/_work.scss
+++ b/sass/Pages/_work.scss
@@ -45,10 +45,10 @@ form{
     }
 }
 
-.menu_name{
-    font-size: 2rem;
-    font-weight: bold;
-    text-align: center;
+
+.menu_main{
+    width: 50vw;
+    background-color: $cd-menu1;
 }
 
 
