--- a/sass/Base/_base.scss
+++ b/sass/Base/_base.scss
@@ -2,6 +2,10 @@ h1{
     margin: 0;
 }
 
+h1, h2, h3{
+    text-align: center;
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -10,4 +14,8 @@ body{
 a{
     text-decoration: none;
     color: $cd-secondary;
+}
+
+ul{
+    list-style: none;
 }
