--- a/css/sass/Utils/_variables.scss
+++ b/css/sass/Utils/_variables.scss
@@ -7,12 +7,7 @@ $cd-secondary: #fdcb46;
 $cd-menu1: #fcdfdb;
 
 
-// Variables Test
-$cd-danger: #b20a37;
-$cd-txt--invalid: #fff;
-$ball-size : 200px;
-
-
+// Variables Color Button
 $cd-btn-start: #579c87;
 $cd-btn-end: #399276;
 $cd-btn: #579c87;
