--- a/css/sass/Base/_base.scss
+++ b/css/sass/Base/_base.scss
@@ -19,3 +19,12 @@ a{
 ul{
     list-style: none;
 }
+
+.txt_center{
+    text-align: center;
+}
+
+.block_center{
+    margin-left: auto;
+    margin-right: auto;
+}
