--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,15 @@ ul {
   list-style: none;
 }
 
+.txt_center {
+  text-align: center;
+}
+
+.block_center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @font-face {
   font-family: "Grotesk_Light";
   src: url("Grotesk_Light.ttf") format("truetype");
@@ -110,28 +119,14 @@ main {
   min-height: calc(100vh - 70px);
 }
 
-.menu_img {
+.scale_img {
   width: 350px;
   box-shadow: 0px 0px 10px 6px #dadada;
   transform: scale(1);
   transition: transform 200ms;
 }
-.menu_img:hover {
+.scale_img:hover {
   transform: scale(1.1);
-}
-.menu_img--mod {
-  display: block;
-  width: 700px;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  transform: scale(1);
-  transition: transform 200ms;
-}
-
-.menu_main {
-  width: 50vw;
-  background-color: #fcdfdb;
 }
 
 .btn {
@@ -158,6 +153,34 @@ main {
   display: flex;
   flex-wrap: wrap;
   width: 900px;
+}
+
+/* Underline From Left */
+.hvr-underline-from-left {
+  vertical-align: middle;
+  display: inline-block;
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+
+.hvr-underline-from-left:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 100%;
+  bottom: 0;
+  background: #fdcb46;
+  height: 4px;
+  transition-property: right;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-out;
+}
+
+.hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
+  right: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
