--- a/view/menu_1b.html
+++ b/view/menu_1b.html
@@ -31,9 +31,9 @@
             <h2>La note enchantée</h2>
            
                 <ul>
-                    <li>
+                    <li class="block_center txt_center">
                         <section>
-                            <h3>Prélude</h3>
+                            <h3 class="hvr-underline-from-left">Prélude</h3>
                                 <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
                                 <p>Caviar osciètre sur blini à la farine de blé noir</p>
                                 <p>Homard et espuma de potiron mariné aux zests d'orange</p>
@@ -41,9 +41,9 @@
                         </section>
                     </li>
                 
-                    <li>
+                    <li class="block_center txt_center">
                         <section>
-                            <h3>Point d'orgue</h3>
+                            <h3 class="hvr-underline-from-left">Point d'orgue</h3>
                                 <p>Noix de coquilles Saint-Jacques sur lit de purée de céléri-rave</p>
                                 <p>Langoustine poêlée, purée de patate douce</p>
                                 <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
@@ -52,9 +52,9 @@
             
            
                 
-                    <li> 
+                    <li class="block_center txt_center"> 
                         <section>
-                            <h3>Mouvement final</h3>
+                            <h3 class="hvr-underline-from-left">Mouvement final</h3>
                                 <p>Macron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
                                 <p>Baba au rhim revisité avec son coulis de citron</p>
                                 <p>Tarte au citron meringuée destructurée</p>
