--- a/css/sass/Utils/_variables.scss
+++ b/css/sass/Utils/_variables.scss
@@ -4,7 +4,12 @@ $cd-secondary: #fdcb46;
 
 
 // Variables Colors Menu
-$cd-menu1: #fcdfdb;
+$cd-menu1-primary: #fcdfdb;
+$cd-menu1-secondary: #6b4649;
+
+
+
+
 
 
 // Variables Color Button
