--- a/view/menu_1b.html
+++ b/view/menu_1b.html
@@ -24,20 +24,23 @@
         <header>
             <a href="..\index.html"><h1>ohmyfood</h1></a>            
         </header>  
+
+        <h2>La note enchantée</h2>
+
          
-        <article>             
+        <article class="block_center width_menu">             
             <i class="fas fa-music"></i>
 
             <h2>La note enchantée</h2>
            
                 <ul>
-                    <li class="block_center txt_center">
+                    <li class="txt_center">
                         <section>
                             <h3 class="hvr-underline-from-left">Prélude</h3>
-                                <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
-                                <p>Caviar osciètre sur blini à la farine de blé noir</p>
-                                <p>Homard et espuma de potiron mariné aux zests d'orange</p>
-                                <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
+                                <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p><p>98€</p>
+                                <p>Caviar osciètre sur blini à la farine de blé noir</p><p>115€</p>
+                                <p>Homard et espuma de potiron mariné aux zests d'orange</p><p>89€</p>
+                                <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p><p>105€</p>
                         </section>
                     </li>
                 
@@ -48,9 +51,8 @@
                                 <p>Langoustine poêlée, purée de patate douce</p>
                                 <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
                         </section>
-                    </li>   
-            
-           
+                        
+                    </li>       
                 
                     <li class="block_center txt_center"> 
                         <section>
@@ -59,19 +61,18 @@
                                 <p>Baba au rhim revisité avec son coulis de citron</p>
                                 <p>Tarte au citron meringuée destructurée</p>
                         </section>
-                    </li>
-                         
+                    </li>                         
                 </ul>
             
             <h2>La note enchantée</h2>         
             
         </article>
 
-        <a class="btn" href='..\index.html'">Retour</a>
+        <a class="btn block_center" href='..\index.html'">Retour</a>
 
         <footer>
-            <a href="mentions_legales.html">Mentions légales</a>
-            <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>            
+            <a class="btn_foot" href="mentions_legales.html">Mentions légales</a>
+            <a class="btn_foot" href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>           
         </footer>    
     
     </body>
