--- a/css/sass/Base/_base.scss
+++ b/css/sass/Base/_base.scss
@@ -6,6 +6,10 @@ h1, h2, h3{
     text-align: center;
 }
 
+h2, h3{
+    font-weight: normal;
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -18,6 +22,9 @@ a{
 
 ul{
     list-style: none;
+    margin:0;
+    padding:0;  
+
 }
 
 .txt_center{
