--- a/css/sass/Base/_typography.scss
+++ b/css/sass/Base/_typography.scss
@@ -1,7 +1,13 @@
 @font-face{
-    font-family: "Grotesk_Light";
-    src: url("Grotesk_Light.ttf") format("truetype");
+    font-family: "Grotesk-Light";
+    src: url("./fonts/Grotesk-Light.ttf");
 }
+
+@font-face{
+    font-family: "Devonshire-Regular";
+    src: url("./fonts/Devonshire-Regular.ttf");
+}
+
 
 html{    
     font-size: .625em; /* fallback IE8+ */
@@ -10,5 +16,5 @@ html{
 
 body{
     font-size: 1.8em; /* base font-size is equivalent "14px" */
-    font-family: "Grotesk_Light"  
+    font-family: "Grotesk-Light"  
 }
