--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ h1, h2, h3 {
   text-align: center;
 }
 
+h2, h3 {
+  font-weight: normal;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -18,6 +22,8 @@ a {
 
 ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .txt_center {
@@ -30,8 +36,12 @@ ul {
 }
 
 @font-face {
-  font-family: "Grotesk_Light";
-  src: url("Grotesk_Light.ttf") format("truetype");
+  font-family: "Grotesk-Light";
+  src: url("./fonts/Grotesk-Light.ttf");
+}
+@font-face {
+  font-family: "Devonshire-Regular";
+  src: url("./fonts/Devonshire-Regular.ttf");
 }
 html {
   font-size: 0.625em;
@@ -43,7 +53,7 @@ html {
 body {
   font-size: 1.8em;
   /* base font-size is equivalent "14px" */
-  font-family: "Grotesk_Light";
+  font-family: "Grotesk-Light";
 }
 
 header {
@@ -68,10 +78,11 @@ footer {
 }
 
 .btn_foot {
-  color: #fdcb46;
-  background-color: #579c87;
   border: none;
   font-size: 3rem;
+  text-align: center;
+  color: #fdcb46;
+  background-color: #579c87;
 }
 .btn_foot:hover {
   animation: shake 0.5s;
@@ -132,8 +143,6 @@ main {
 .btn {
   display: block;
   width: 15rem;
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 2vw;
   border-radius: 2rem;
   font-size: 2rem;
@@ -155,6 +164,17 @@ main {
   width: 900px;
 }
 
+.width_menu {
+  width: 80vw;
+  background-color: #fcdfdb;
+}
+
+article {
+  font-family: "Devonshire-Regular";
+  color: #6b4649;
+  font-size: 4rem;
+}
+
 /* Underline From Left */
 .hvr-underline-from-left {
   vertical-align: middle;
@@ -172,7 +192,7 @@ main {
   left: 0;
   right: 100%;
   bottom: 0;
-  background: #fdcb46;
+  background: #6b4649;
   height: 4px;
   transition-property: right;
   transition-duration: 0.3s;
@@ -181,6 +201,16 @@ main {
 
 .hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
   right: 0;
+}
+
+@media (min-width: 768px) {
+  article {
+    font-size: 5rem;
+  }
+
+  .width_menu {
+    width: 60vw;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
