--- a/view/menu_1b.html
+++ b/view/menu_1b.html
@@ -34,32 +34,53 @@
             <h2>La note enchantée</h2>
            
                 <ul>
-                    <li class="txt_center">
-                        <section>
+                    <li>
+                        <section class="block_center">
+
+                            <img src="../img/bar_menu1.png" alt="" />
                             <h3 class="hvr-underline-from-left">Prélude</h3>
-                                <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p><p>98€</p>
-                                <p>Caviar osciètre sur blini à la farine de blé noir</p><p>115€</p>
-                                <p>Homard et espuma de potiron mariné aux zests d'orange</p><p>89€</p>
-                                <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p><p>105€</p>
+                            <img src="../img/bar_menu1.png" alt="" />
+                                
+                            <p>Ravioles de foie gras accompagnés de leur crème</p>
+                            <p class="price">98€</p>
+                            <p>Caviar osciètre sur blini à la farine de blé noir</p>
+                            <p class="price">115€</p>
+                            <p>Homard et espuma de potiron mariné aux zests d'orange</p>
+                            <p class="price">89€</p>
+                            <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
+                            <p class="price">105€</p>
+
                         </section>
                     </li>
                 
-                    <li class="block_center txt_center">
-                        <section>
+                    <li>
+                        <section class="block_center">
+                            <img src="../img/bar_menu1.png" alt="" />
                             <h3 class="hvr-underline-from-left">Point d'orgue</h3>
-                                <p>Noix de coquilles Saint-Jacques sur lit de purée de céléri-rave</p>
-                                <p>Langoustine poêlée, purée de patate douce</p>
-                                <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
+                            <img src="../img/bar_menu1.png" alt="" />
+
+                            <p>Noix de coquilles Saint-Jacques sur lit de purée de céléri-rave</p>
+                            <p class="price">102€</p>
+                            <p>Langoustine poêlée, purée de patate douce</p>
+                            <p class="price">205€</p>
+                            <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
+                            <p class="price">169€</p>
+
                         </section>
                         
                     </li>       
                 
-                    <li class="block_center txt_center"> 
-                        <section>
-                            <h3 class="hvr-underline-from-left">Mouvement final</h3>
-                                <p>Macron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
-                                <p>Baba au rhim revisité avec son coulis de citron</p>
-                                <p>Tarte au citron meringuée destructurée</p>
+                    <li> 
+                        <section class="block_center">
+
+                            <img src="../img/bar_menu1.png" alt="" />
+                            <h3 class="block_center hvr-underline-from-left">Mouvement final</h3>
+                            <img src="../img/bar_menu1.png" alt="" />
+
+                            <p>Macron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+                            <p>Baba au rhim revisité avec son coulis de citron</p>
+                            <p>Tarte au citron meringuée destructurée</p>
+
                         </section>
                     </li>                         
                 </ul>
