--- a/css/sass/Base/_base.scss
+++ b/css/sass/Base/_base.scss
@@ -23,8 +23,12 @@ a{
 ul{
     list-style: none;
     margin:0;
-    padding:0;  
+    padding:0;
+}
 
+section{
+    width: 66vw;
+    
 }
 
 .txt_center{
@@ -35,3 +39,5 @@ ul{
     margin-left: auto;
     margin-right: auto;
 }
+
+
