--- a/css/sass/Pages/_work.scss
+++ b/css/sass/Pages/_work.scss
@@ -11,6 +11,10 @@ article{
     color: $cd-menu1-secondary;    
 }
 
+section{
+    width: 50vw;    
+}
+
 .scale_img{
     width: 350px;
     box-shadow: 0px 0px 10px 6px rgb(218, 218, 218);
@@ -53,6 +57,15 @@ article{
     background-color: $cd-menu1-primary;
 }
 
+.width_img{
+    align-content: center;
+    font-size: 100px;
+    background: -webkit-linear-gradient(0.40turn, rgb(255, 187, 0), rgb(248, 0, 0));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 
 .price{
     float: right;
@@ -62,6 +75,7 @@ article{
 
 
 ////////////////TEST/////////////
+
 
 
 
@@ -98,7 +112,7 @@ article{
   
   @media (min-width: 768px) {
     article{
-        font-size: 4rem;
+        font-size: 3rem;
     }
 
     .price{
@@ -107,9 +121,6 @@ article{
     }
 
     .width_menu{
-        width: 70vw;
+        width: 80vw;
     }
-    
-
-
   }    
