--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ ul {
 }
 
 section {
-  width: 66vw;
+  width: 50vw;
 }
 
 .txt_center {
@@ -39,6 +39,32 @@ section {
   margin-right: auto;
 }
 
+.padding_top {
+  padding-top: 50px;
+}
+
+.padding_right {
+  padding-right: 50px;
+}
+
+.padding_left {
+  padding-left: 50px;
+}
+
+.margin_null {
+  margin: 0;
+}
+
+.flexbox {
+  display: flex;
+  justify-content: center;
+}
+
+@media (min-width: 768px) {
+  h3 {
+    font-size: 5rem;
+  }
+}
 @font-face {
   font-family: "Grotesk-Light";
   src: url("./fonts/Grotesk-Light.ttf");
@@ -140,6 +166,10 @@ article {
   color: #6b4649;
 }
 
+section {
+  width: 50vw;
+}
+
 .scale_img {
   width: 350px;
   box-shadow: 0px 0px 10px 6px #dadada;
@@ -179,6 +209,15 @@ article {
   background-color: #fcdfdb;
 }
 
+.width_img {
+  align-content: center;
+  font-size: 100px;
+  background: -webkit-linear-gradient(0.4turn, #ffbb00, #f80000);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .price {
   float: right;
   margin-top: -50px;
@@ -214,7 +253,7 @@ article {
 
 @media (min-width: 768px) {
   article {
-    font-size: 4rem;
+    font-size: 3rem;
   }
 
   .price {
@@ -223,7 +262,7 @@ article {
   }
 
   .width_menu {
-    width: 70vw;
+    width: 80vw;
   }
 }
 
