--- a/view/menu_1b.html
+++ b/view/menu_1b.html
@@ -25,22 +25,22 @@
             <a href="..\index.html"><h1>ohmyfood</h1></a>            
         </header>  
 
-        <h2>La note enchantée</h2>
+        <h2>La note enchantée</h2> 
 
-         
-        <article class="block_center width_menu">             
-            <i class="fas fa-music"></i>
-
-            <h2>La note enchantée</h2>
-           
+        <article class="block_center width_menu"> 
+            <div class="txt_center padding_top"><i class="width_img fas fa-music"></i></div> 
+                <h2 class="margin_null">La note enchantée</h2>
+             
                 <ul>
                     <li>
                         <section class="block_center">
-
-                            <img src="../img/bar_menu1.png" alt="" />
-                            <h3 class="hvr-underline-from-left">Prélude</h3>
-                            <img src="../img/bar_menu1.png" alt="" />
-                                
+                            <div class="flexbox">
+                                <div>
+                                    <img class="padding_right" src="../img/bar_menu1.png" alt="" />
+                                    <h3 class="hvr-underline-from-left">Prélude</h3>
+                                    <img class="padding_left" src="../img/bar_menu1.png" alt="" />
+                                </div>
+                            </div>                                
                             <p>Ravioles de foie gras accompagnés de leur crème</p>
                             <p class="price">98€</p>
                             <p>Caviar osciètre sur blini à la farine de blé noir</p>
@@ -49,35 +49,37 @@
                             <p class="price">89€</p>
                             <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
                             <p class="price">105€</p>
-
                         </section>
-                    </li>
-                
+                    </li>                
                     <li>
                         <section class="block_center">
-                            <img src="../img/bar_menu1.png" alt="" />
-                            <h3 class="hvr-underline-from-left">Point d'orgue</h3>
-                            <img src="../img/bar_menu1.png" alt="" />
-
+                            <div class="flexbox">
+                                <div>
+                                    <img class="padding_right" src="../img/bar_menu1.png" alt="" />
+                                    <h3 class="hvr-underline-from-left">Point d'orgue</h3>
+                                    <img class="padding_left" src="../img/bar_menu1.png" alt="" />
+                                </div>
+                            </div>
                             <p>Noix de coquilles Saint-Jacques sur lit de purée de céléri-rave</p>
                             <p class="price">102€</p>
                             <p>Langoustine poêlée, purée de patate douce</p>
                             <p class="price">205€</p>
                             <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
                             <p class="price">169€</p>
-
-                        </section>
-                        
-                    </li>       
-                
+                        </section>                        
+                    </li>      
                     <li> 
                         <section class="block_center">
 
-                            <img src="../img/bar_menu1.png" alt="" />
-                            <h3 class="block_center hvr-underline-from-left">Mouvement final</h3>
-                            <img src="../img/bar_menu1.png" alt="" />
+                            <div class="flexbox">
+                                <div>
+                                    <img class="padding_right" src="../img/bar_menu1.png" alt="" />
+                                    <h3 class="hvr-underline-from-left">Mouvement final</h3>
+                                    <img class="padding_left" src="../img/bar_menu1.png" alt="" />
+                                </div>
+                            </div>
 
-                            <p>Macron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+                            <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
                             <p>Baba au rhim revisité avec son coulis de citron</p>
                             <p>Tarte au citron meringuée destructurée</p>
 
