--- a/view/mentions_legales.html
+++ b/view/mentions_legales.html
@@ -26,14 +26,14 @@
         <main>
             <p>BLA BLA BLA</p>
 
-            <a href='..\index.html'">Retour</a>
+            <a class="btn" href='..\index.html'>Retour</a>
             
         </main>
 
         <footer>
-            <a href="mentions_legales.html">Mentions légales</a>
-            <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>            
-        </footer>       
+            <a class="btn_foot" href="view/mentions_legales.html">Mentions légales</a>
+            <a class="btn_foot" href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>            
+        </footer>     
        
     </body>
 </html>
