--- a/css/sass/Base/_base.scss
+++ b/css/sass/Base/_base.scss
@@ -26,13 +26,7 @@ ul{
     padding:0;
 }
 
-.padding_right{
-    display: none;
-}
 
-.padding_left{
-    display: none;
-}
 
 .txt_center{
     text-align: center;
@@ -54,40 +48,24 @@ ul{
 }
 
 
-.flexbox{
-    display: flex;
-    justify-content: center;
-}
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
-    .padding_right{
-        display: inline-block;
-        padding-right: 50px;
-        width: 10vw;
-    }
-    
-    .padding_left{
-        display: inline-block;
-        padding-left: 50px;
-        width: 10vw;
+@media ( min-width : 768px ) {  
+    .flexbox{
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap; 
     }
 }
 
  
 
-@media only screen and (min-width : 1824px) {
+@media ( min-width : 1200px ) {
     h3{
         font-size: 5rem;
     }
 
-    .padding_right{
-        display: inline-block;
-        padding-right: 50px;
-        width: 15vw;
-    }
-    
-    .padding_left{
-        display: inline-block;
-        padding-left: 50px;
-        width: 15vw;
+    .flexbox{
+        justify-content: space-around;
+        flex-wrap: wrap; 
+        margin-top: 30px;
     }
 }
