--- a/css/style.css
+++ b/css/style.css
@@ -26,14 +26,6 @@ ul {
   padding: 0;
 }
 
-.padding_right {
-  display: none;
-}
-
-.padding_left {
-  display: none;
-}
-
 .txt_center {
   text-align: center;
 }
@@ -51,39 +43,22 @@ ul {
   margin: 0;
 }
 
-.flexbox {
-  display: flex;
-  justify-content: center;
-}
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-  .padding_right {
-    display: inline-block;
-    padding-right: 50px;
-    width: 10vw;
-  }
-
-  .padding_left {
-    display: inline-block;
-    padding-left: 50px;
-    width: 10vw;
+@media (min-width: 768px) {
+  .flexbox {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
   }
 }
-@media only screen and (min-width: 1824px) {
+@media (min-width: 1200px) {
   h3 {
     font-size: 5rem;
   }
 
-  .padding_right {
-    display: inline-block;
-    padding-right: 50px;
-    width: 15vw;
-  }
-
-  .padding_left {
-    display: inline-block;
-    padding-left: 50px;
-    width: 15vw;
+  .flexbox {
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 30px;
   }
 }
 @font-face {
@@ -176,9 +151,9 @@ footer {
   }
 }
 main {
-  margin-left: auto;
-  margin-right: auto;
   min-height: calc(100vh - 70px);
+  margin: 0 auto;
+  width: 15em;
 }
 
 article {
@@ -192,37 +167,8 @@ section {
 }
 
 .scale_img {
-  width: 350px;
+  width: 45vw;
   box-shadow: 0px 0px 10px 6px #dadada;
-  transform: scale(1);
-  transition: transform 200ms;
-}
-.scale_img:hover {
-  transform: scale(1.1);
-}
-
-.btn {
-  display: block;
-  width: 15rem;
-  margin-bottom: 2vw;
-  border-radius: 2rem;
-  font-size: 2rem;
-  overflow: hidden;
-  text-align: center;
-  cursor: pointer;
-  color: #fdcb46;
-  background-color: #579c87;
-  transition: transform 450ms, background-color 300ms 150ms;
-}
-.btn:hover {
-  transform: scale(1.13);
-  background-color: #399276;
-}
-
-.main_index {
-  display: flex;
-  flex-wrap: wrap;
-  width: 900px;
 }
 
 .width_menu {
@@ -242,6 +188,14 @@ section {
 .price {
   float: right;
   margin-top: -50px;
+}
+
+.padding_right {
+  display: none;
+}
+
+.padding_left {
+  display: none;
 }
 
 /*Underline From Left */
@@ -273,8 +227,17 @@ section {
 }
 
 @media (min-width: 768px) {
+  main {
+    display: flex;
+    width: 55em;
+  }
+
   article {
     font-size: 3rem;
+  }
+
+  .scale_img {
+    width: 40vw;
   }
 
   .price {
@@ -284,6 +247,72 @@ section {
 
   .width_menu {
     width: 80vw;
+  }
+
+  .padding_right {
+    display: inline-block;
+    padding-right: 50px;
+    width: 10vw;
+  }
+
+  .padding_left {
+    display: inline-block;
+    padding-left: 50px;
+    width: 10vw;
+  }
+
+  .btn {
+    display: block;
+    width: 35rem;
+    margin: 0 auto 2vw;
+    border-radius: 2rem;
+    font-size: 5rem;
+    overflow: hidden;
+    text-align: center;
+    cursor: pointer;
+    color: #fdcb46;
+    background-color: #579c87;
+  }
+}
+@media (min-width: 1200px) {
+  .padding_right {
+    display: inline-block;
+    padding-right: 50px;
+    width: 15vw;
+  }
+
+  .padding_left {
+    display: inline-block;
+    padding-left: 50px;
+    width: 15vw;
+  }
+
+  .scale_img {
+    width: 20vw;
+    box-shadow: 0px 0px 10px 6px #dadada;
+    transform: scale(1);
+    transition: transform 200ms;
+  }
+  .scale_img:hover {
+    transform: scale(1.1);
+  }
+
+  .btn {
+    display: block;
+    width: 20rem;
+    margin: 0 auto 2vw;
+    border-radius: 2rem;
+    font-size: 2rem;
+    overflow: hidden;
+    text-align: center;
+    cursor: pointer;
+    color: #fdcb46;
+    background-color: #579c87;
+    transition: transform 450ms, background-color 300ms 150ms;
+  }
+  .btn:hover {
+    transform: scale(1.13);
+    background-color: #399276;
   }
 }
 
