--- a/css/sass/Layout/_footer.scss
+++ b/css/sass/Layout/_footer.scss
@@ -3,15 +3,14 @@ footer{
     position: sticky;
     bottom: 0; right: 0; left: 0;
     padding: 10px;
-    justify-content: space-between;
-    font-size: 3rem;   
+    justify-content: space-between;  
     color: $cd-secondary;
     background-color: $cd-primary;    
 }
 
 .btn_foot{
     border: none;
-    font-size: 3rem;
+    font-size: 2rem;
     text-align: center;
     color: $cd-secondary;    
     background-color: $cd-primary;    
@@ -33,4 +32,10 @@ footer{
     80% { transform: translate(-1px, -1px) rotate(1deg); }
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+
+  @media (min-width: 768px) {
+    .btn_foot{        
+        font-size: 5rem;
+    }
   }
