--- a/css/sass/Layout/_header.scss
+++ b/css/sass/Layout/_header.scss
@@ -5,3 +5,12 @@ header{
     color: $cd-secondary;
     background-color: $cd-primary;
 }
+
+
+@media ( min-width : 768px ) {  
+
+    header{
+        font-size: 5rem;
+    }
+}
+
