--- a/css/sass/Pages/_work.scss
+++ b/css/sass/Pages/_work.scss
@@ -19,7 +19,24 @@ section{
     box-shadow: 0px 0px 10px 6px rgb(218, 218, 218);
 }
 
-
+.btn {
+    display: block;
+    width: 15rem;
+    margin-bottom: 2vw;    
+    border-radius: 2rem;
+    font-size: 2rem;
+    overflow: hidden;
+    margin: 15px auto;
+    text-align: center;
+    cursor: pointer;
+    color: $cd-secondary;
+    background-color: $cd-primary;    
+    transition: transform 450ms, background-color 300ms 150ms;
+        &:hover {
+        transform: scale(1.13);
+        background-color: $cd-btn-end;
+    }
+}
 
 
 .width_menu{
@@ -81,11 +98,20 @@ section{
   @media (min-width: 768px) {
     main{
         display: flex;
-        width: 55em;
+        width: auto;        
+        margin-left: auto;
+        margin-right: auto;
     }
 
     article{
         font-size: 3rem;
+    }
+
+    .btn{
+        font-size: 4rem;
+        width: 30vw;
+        margin: 35px auto;
+
     }
 
     .scale_img{
@@ -111,25 +137,11 @@ section{
         display: inline-block;
         padding-left: 50px;
         width: 10vw;
-    }
-
-    .btn {
-        display: block;
-        width: 35rem;
-        margin: 0 auto 2vw;    
-        border-radius: 2rem;
-        font-size: 5rem;
-        overflow: hidden;
-        text-align: center;
-        cursor: pointer;
-        color: $cd-secondary;
-        background-color: $cd-primary;    
-        
-    }
-
+    } 
   }    
 
   @media ( min-width : 1200px ) {
+
     .padding_right{
         display: inline-block;
         padding-right: 50px;
@@ -153,20 +165,6 @@ section{
     }
 
     .btn {
-        display: block;
-        width: 20rem;
-        margin: 0 auto 2vw;    
-        border-radius: 2rem;
-        font-size: 2rem;
-        overflow: hidden;
-        text-align: center;
-        cursor: pointer;
-        color: $cd-secondary;
-        background-color: $cd-primary;    
-        transition: transform 450ms, background-color 300ms 150ms;
-            &:hover {
-            transform: scale(1.13);
-            background-color: $cd-btn-end;
-        }
+        width: 20vw;
     }
 }
