--- a/css/style.css
+++ b/css/style.css
@@ -43,22 +43,20 @@ ul {
   margin: 0;
 }
 
-@media (min-width: 768px) {
-  .flexbox {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-  }
+.flexbox {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 30px;
 }
+
 @media (min-width: 1200px) {
   h3 {
     font-size: 5rem;
   }
 
   .flexbox {
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin-top: 30px;
+    flex-wrap: nowrap;
   }
 }
 @font-face {
@@ -90,6 +88,11 @@ header {
   background-color: #579c87;
 }
 
+@media (min-width: 768px) {
+  header {
+    font-size: 5rem;
+  }
+}
 footer {
   display: flex;
   position: sticky;
@@ -98,14 +101,13 @@ footer {
   left: 0;
   padding: 10px;
   justify-content: space-between;
-  font-size: 3rem;
   color: #fdcb46;
   background-color: #579c87;
 }
 
 .btn_foot {
   border: none;
-  font-size: 3rem;
+  font-size: 2rem;
   text-align: center;
   color: #fdcb46;
   background-color: #579c87;
@@ -150,6 +152,11 @@ footer {
     transform: translate(1px, -2px) rotate(-1deg);
   }
 }
+@media (min-width: 768px) {
+  .btn_foot {
+    font-size: 5rem;
+  }
+}
 main {
   min-height: calc(100vh - 70px);
   margin: 0 auto;
@@ -169,6 +176,25 @@ section {
 .scale_img {
   width: 45vw;
   box-shadow: 0px 0px 10px 6px #dadada;
+}
+
+.btn {
+  display: block;
+  width: 15rem;
+  margin-bottom: 2vw;
+  border-radius: 2rem;
+  font-size: 2rem;
+  overflow: hidden;
+  margin: 15px auto;
+  text-align: center;
+  cursor: pointer;
+  color: #fdcb46;
+  background-color: #579c87;
+  transition: transform 450ms, background-color 300ms 150ms;
+}
+.btn:hover {
+  transform: scale(1.13);
+  background-color: #399276;
 }
 
 .width_menu {
@@ -229,11 +255,19 @@ section {
 @media (min-width: 768px) {
   main {
     display: flex;
-    width: 55em;
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   article {
     font-size: 3rem;
+  }
+
+  .btn {
+    font-size: 4rem;
+    width: 30vw;
+    margin: 35px auto;
   }
 
   .scale_img {
@@ -260,19 +294,6 @@ section {
     padding-left: 50px;
     width: 10vw;
   }
-
-  .btn {
-    display: block;
-    width: 35rem;
-    margin: 0 auto 2vw;
-    border-radius: 2rem;
-    font-size: 5rem;
-    overflow: hidden;
-    text-align: center;
-    cursor: pointer;
-    color: #fdcb46;
-    background-color: #579c87;
-  }
 }
 @media (min-width: 1200px) {
   .padding_right {
@@ -298,21 +319,7 @@ section {
   }
 
   .btn {
-    display: block;
-    width: 20rem;
-    margin: 0 auto 2vw;
-    border-radius: 2rem;
-    font-size: 2rem;
-    overflow: hidden;
-    text-align: center;
-    cursor: pointer;
-    color: #fdcb46;
-    background-color: #579c87;
-    transition: transform 450ms, background-color 300ms 150ms;
-  }
-  .btn:hover {
-    transform: scale(1.13);
-    background-color: #399276;
+    width: 20vw;
   }
 }
 
