--- a/view/menu_1.html
+++ b/view/menu_1.html
@@ -24,7 +24,12 @@
         </header>  
 
         <main>              
-            
+            <svg width="100" height="100">
+                <g color="blue">
+                    <image xlink:href="img/itunes-note-brands.svg" x="0" y="0" height="50px" width="50px"/>
+                </g>
+              </svg>
+
             <p class="menu_name">La note enchantée</p>
             <figure>              
                 <img class="menu_img--mod" src="img/Menus/menu-1b.png" alt="Menu 1" title="Menu 1">
