--- a/css/sass/Pages/_work.scss
+++ b/css/sass/Pages/_work.scss
@@ -4,14 +4,8 @@ main {
     width: 15em
 }
 
-article{
-    font-size: 2rem;
-    font-family: "Devonshire-Regular";
-    color: $cd-menu1-secondary;    
-}
-
 section{
-    width: 50vw;    
+    width: 70vw;    
 }
 
 .scale_img{
@@ -46,17 +40,11 @@ section{
 
 .width_img{
     align-content: center;
-    font-size: 100px;
+    font-size: 10vw;
     background: -webkit-linear-gradient(0.40turn, rgb(255, 187, 0), rgb(248, 0, 0));
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-}
-
-
-.price{
-    float: right;
-    margin-top: -50px;
 }
 
 .padding_right{
@@ -93,12 +81,36 @@ section{
     right: 0;
   }
 
-  
-  
-  @media (min-width: 768px) {
+  ////////Menu1///////
+  .style_menu1{
+    font-size: 2rem;
+    font-family: "Devonshire-Regular";
+    color: $cd-menu1-secondary;    
+}
+
+.flex_menu{
+    display: flex;
+}
+
+
+span{
+    float: left;
+    width: 10vw;
+    text-align: center;
+    display: block;
+    &:first-child {
+      width: 60vw;
+      text-align: left;
+    }
+}
+
+.price{
+    padding-bottom: 30px;
+}
+
+
+@media (min-width: 768px) {
     main{
-        display: flex;
-        width: auto;        
         margin-left: auto;
         margin-right: auto;
     }
@@ -116,12 +128,7 @@ section{
 
     .scale_img{
         width: 40vw;
-    }
-
-    .price{
-        float: right;
-        margin-top: -85px;
-    }
+    }  
 
     .width_menu{
         width: 80vw;
@@ -137,20 +144,37 @@ section{
         display: inline-block;
         padding-left: 50px;
         width: 10vw;
-    } 
-  }    
+    }
+      ////////Menu1///////
+    .style_menu1{
+        font-size: 5rem;
+    }
 
-  @media ( min-width : 1200px ) {
+    .price{
+        padding-bottom: 73px;
+    }
+
+    span{
+        width: 10vw;
+        &:first-child {
+          width: 60vw;
+        }
+    }
+   
+}    
+
+
+@media ( min-width : 1200px ) {
 
     .padding_right{
         display: inline-block;
-        padding-right: 50px;
+        padding-right: 20px;
         width: 15vw;
     }
     
     .padding_left{
         display: inline-block;
-        padding-left: 50px;
+        padding-left: 20px;
         width: 15vw;
     } 
 
@@ -166,5 +190,14 @@ section{
 
     .btn {
         width: 20vw;
+    }
+
+      ////////Menu1///////
+    .style_menu1{
+        font-size: 5rem;
+    }
+
+    .price{
+        padding-bottom: 0;
     }
 }
