--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,12 @@ ul {
 
 @media (min-width: 1200px) {
   h3 {
-    font-size: 5rem;
+    font-size: 6rem;
   }
 
   .flexbox {
     flex-wrap: nowrap;
+    width: 50vw;
   }
 }
 @font-face {
@@ -80,16 +81,16 @@ body {
   font-family: "Grotesk-Light";
 }
 
-header {
-  font-size: 3rem;
-  padding: 30px;
+.header_top {
+  font-size: 2rem;
+  padding: 25px;
   text-align: center;
   color: #fdcb46;
   background-color: #579c87;
 }
 
 @media (min-width: 768px) {
-  header {
+  .header_top {
     font-size: 5rem;
   }
 }
@@ -163,14 +164,8 @@ main {
   width: 15em;
 }
 
-article {
-  font-size: 2rem;
-  font-family: "Devonshire-Regular";
-  color: #6b4649;
-}
-
 section {
-  width: 50vw;
+  width: 70vw;
 }
 
 .scale_img {
@@ -204,16 +199,11 @@ section {
 
 .width_img {
   align-content: center;
-  font-size: 100px;
+  font-size: 10vw;
   background: -webkit-linear-gradient(0.4turn, #ffbb00, #f80000);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-
-.price {
-  float: right;
-  margin-top: -50px;
 }
 
 .padding_right {
@@ -252,10 +242,33 @@ section {
   right: 0;
 }
 
+.style_menu1 {
+  font-size: 2rem;
+  font-family: "Devonshire-Regular";
+  color: #6b4649;
+}
+
+.flex_menu {
+  display: flex;
+}
+
+span {
+  float: left;
+  width: 10vw;
+  text-align: center;
+  display: block;
+}
+span:first-child {
+  width: 60vw;
+  text-align: left;
+}
+
+.price {
+  padding-bottom: 30px;
+}
+
 @media (min-width: 768px) {
   main {
-    display: flex;
-    width: auto;
     margin-left: auto;
     margin-right: auto;
   }
@@ -274,11 +287,6 @@ section {
     width: 40vw;
   }
 
-  .price {
-    float: right;
-    margin-top: -85px;
-  }
-
   .width_menu {
     width: 80vw;
   }
@@ -294,17 +302,32 @@ section {
     padding-left: 50px;
     width: 10vw;
   }
+
+  .style_menu1 {
+    font-size: 5rem;
+  }
+
+  .price {
+    padding-bottom: 73px;
+  }
+
+  span {
+    width: 10vw;
+  }
+  span:first-child {
+    width: 60vw;
+  }
 }
 @media (min-width: 1200px) {
   .padding_right {
     display: inline-block;
-    padding-right: 50px;
+    padding-right: 20px;
     width: 15vw;
   }
 
   .padding_left {
     display: inline-block;
-    padding-left: 50px;
+    padding-left: 20px;
     width: 15vw;
   }
 
@@ -320,6 +343,14 @@ section {
 
   .btn {
     width: 20vw;
+  }
+
+  .style_menu1 {
+    font-size: 5rem;
+  }
+
+  .price {
+    padding-bottom: 0;
   }
 }
 
