--- a/view/menu_1b.html
+++ b/view/menu_1b.html
@@ -21,63 +21,75 @@
     </head>
 
     <body>        
-        <header>
-            <a href="..\index.html"><h1>ohmyfood</h1></a>            
+        <header class="header_top">
+            <a href="../index.html"><h1>ohmyfood</h1></a>        
         </header>  
 
         <h2>La note enchantée</h2> 
 
-        <article class="block_center width_menu"> 
+        <main class="block_center width_menu style_menu1"> 
             <div class="txt_center padding_top"><i class="width_img fas fa-music"></i></div> 
                 <h2 class="margin_null">La note enchantée</h2>
              
                 <ul>
                     <li>
                         <section class="block_center">
-                            <div class="flexbox">
+                            <header class="flexbox block_center">
                                 <div>
                                     <img class="padding_right" src="../img/bar_menu1.png" alt="" />
                                     <h3 class="hvr-underline-from-left">Prélude</h3>
                                     <img class="padding_left" src="../img/bar_menu1.png" alt="" />
                                 </div>
-                            </div>                                
-                            <p>Ravioles de foie gras accompagnés de leur crème</p>
-                            <p class="price">98€</p>
-                            <p>Caviar osciètre sur blini à la farine de blé noir</p>
-                            <p class="price">115€</p>
-                            <p>Homard et espuma de potiron mariné aux zests d'orange</p>
-                            <p class="price">89€</p>
-                            <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
-                            <p class="price">105€</p>
+                            </header>
+                            <div class="flex_menu">
+                                <span>
+                                    <p>Ravioles de foie gras accompagnés de leur crème</p>
+                                    <p>Caviar osciètre sur blini à la farine de blé noir</p>
+                                    <p>Homard et espuma de potiron mariné aux zests d'orange</p>
+                                    <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
+                                </span>
+                                <span>
+                                    <p class="price">98€</p>
+                                    <p class="price">115€</p>
+                                    <p class="price">89€</p>
+                                    <p class="price">105€</p>
+                                </span>
+                            </div>                   
                         </section>
                     </li>                
                     <li>
                         <section class="block_center">
-                            <div class="flexbox">
+                            <header class="flexbox block_center">
                                 <div>
                                     <img class="padding_right" src="../img/bar_menu1.png" alt="" />
                                     <h3 class="hvr-underline-from-left">Point d'orgue</h3>
                                     <img class="padding_left" src="../img/bar_menu1.png" alt="" />
                                 </div>
-                            </div>
-                            <p>Noix de coquilles Saint-Jacques sur lit de purée de céléri-rave</p>
-                            <p class="price">102€</p>
-                            <p>Langoustine poêlée, purée de patate douce</p>
-                            <p class="price">205€</p>
-                            <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
-                            <p class="price">169€</p>
+                            </header>
+                            <div class="flex_menu">
+                                <span>
+                                    <p>Noix de coquilles Saint-Jacques sur lit de purée de céléri-rave</p>
+                                    <p>Langoustine poêlée, purée de patate douce</p>
+                                    <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
+                                </span>
+                                <span>
+                                    <p class="price">102€</p>
+                                    <p class="price">205€</p>
+                                    <p class="price">169€</p>
+                                </span>
+                            </div>     
                         </section>                        
                     </li>      
                     <li> 
                         <section class="block_center">
 
-                            <div class="flexbox">
+                            <header class="flexbox block_center">
                                 <div>
                                     <img class="padding_right" src="../img/bar_menu1.png" alt="" />
                                     <h3 class="hvr-underline-from-left">Mouvement final</h3>
                                     <img class="padding_left" src="../img/bar_menu1.png" alt="" />
                                 </div>
-                            </div>
+                            </header>
 
                             <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
                             <p>Baba au rhim revisité avec son coulis de citron</p>
@@ -89,7 +101,7 @@
             
             <h2>La note enchantée</h2>         
             
-        </article>
+            </main>
 
         <a class="btn block_center" href='..\index.html'">Retour</a>
 
